data/templates/woocommerce/css/template.css
/* ... */
.main-navigation ul {
    margin-bottom: 1em;
    padding-left: 0;
    text-align: left;
}

.main-navigation a {
    color: #333;
    font-weight: 400;
    font-size: .9em;
    text-decoration: none;
}

.main-navigation a:hover {
    color: var(--primary-color);
}

.phpdocumentor-header {
    background: var(--header-bg-color);
    margin-bottom: var(--spacing-xl);
    position: relative;
}

.phpdocumentor-header p {
    color: white;
    font-size: var(--text-lg);
}

.phpdocumentor-title {
    color: var(--title-text-color);
    letter-spacing: .05rem;
    line-height: 1.2;
    text-align: center;
    padding: 0.67em 0;
    margin-top: 0;
}
.phpdocumentor-title small {
    text-shadow: none;
    font-size: var(--text-xxs);
    display: block;
    margin: var(--spacing-sm) 0;
}

.phpdocumentor-summary,
.phpdocumentor-class__summary,
.phpdocumentor-trait__summary,
.phpdocumentor-interface__summary {
    font-style: italic;
}

.phpdocumentor-element__package,
.phpdocumentor-interface__extends,
.phpdocumentor-class__extends,
.phpdocumentor-class__implements {
    display: block;
    font-size: var(--text-xxs);
    font-weight: normal;
    opacity: .7;
}

.phpdocumentor-element__package .phpdocumentor-breadcrumbs {
    display: inline;
}

.phpdocumentor-description {
    margin-bottom: var(--spacing-md);
}

.phpdocumentor-element,
.phpdocumentor-function,
.phpdocumentor-constant,
.phpdocumentor-property,
.phpdocumentor-method {
    position: relative;
}

.phpdocumentor-element--deprecated .phpdocumentor-function__name,
.phpdocumentor-element--deprecated .phpdocumentor-method__name,
.phpdocumentor-element--deprecated .phpdocumentor-constant__name,
.phpdocumentor-element--deprecated .phpdocumentor-property__name,
.phpdocumentor-signature--deprecated .phpdocumentor-signature__name {
    text-decoration: line-through;
}

.phpdocumentor-signature {
    display: inline-block;
    font-size: var(--text-sm);
    margin-bottom: var(--spacing-md);
}

.phpdocumentor-table_of_contents {
    font-size: var(--text-sm);
}

.phpdocumentor .phpdocumentor-sidebar li {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.phpdocumentor .phpdocumentor-sidebar__category-header {
    font-size: var(--text-lg);
    margin-bottom: var(--spacing-sm);
}

.phpdocumentor .phpdocumentor-sidebar__root-package,
.phpdocumentor .phpdocumentor-sidebar__root-namespace {
    font-size: var(--text-md);
    margin-bottom: var(--spacing-xxs);
}

.phpdocumentor-constant:not(:last-child),
.phpdocumentor-function:not(:last-child),
.phpdocumentor-method:not(:last-child),
.phpdocumentor-property:not(:last-child) {
    border-bottom: 1px solid var(--primary-color-lighten);
    padding-bottom: var(--spacing-lg);
}

.phpdocumentor-functions__header,
.phpdocumentor-constants__header,
.phpdocumentor-properties__header,
.phpdocumentor-methods__header {
    border-bottom: 2px solid var(--primary-color-darken);
    padding-bottom: var(--spacing-md);
}

.phpdocumentor-content {
    position: relative;
}

.phpdocumentor-search-results {
    backdrop-filter: blur(5px);
    background: var(--popover-background-color);
    min-height: 100%;
    left: calc(var(--spacing-lg) * -1);
    position: absolute;
    padding: 0 var(--spacing-lg);
    opacity: 1;
    pointer-events: all;
    transition: opacity .3s, background .3s;
    z-index: 9999;
}

.phpdocumentor-search-results--hidden {
    background: transparent;
    backdrop-filter: blur(0);
    opacity: 0;
    pointer-events: none;
}

.phpdocumentor-search-results__entries {
    list-style: none;
    padding: 0;
}

.phpdocumentor-search-results__entry {
    border-bottom: 1px solid var(--table-separator-color);
    padding: var(--spacing-sm) var(--spacing-md);
    text-align: left;
}

.phpdocumentor-search-results__entry a {
    color: var(--link-color-primary);
    display: block;
}

.phpdocumentor-search-results__entry a:hover {
    color: var(--link-hover-color-primary);
}

.phpdocumentor-search-results__entry small {
    margin-top: var(--spacing-xs);
    margin-bottom: var(--spacing-md);
    color: var(--primary-color-darker);
    display: block;
}
.phpdocumentor-search-results__entry h3 {
    line-break: anywhere;
    margin: 0;
}

.phpdocumentor-search {
    position: relative;
    display: none; /** disable by default for non-js flow */
    opacity: .3; /** white-out default for loading indication */
    transition: opacity .3s, background .3s;
    text-align: center;
}
.phpdocumentor-search:before {
    content: '';
    background: transparent;
    left: calc(-1 * var(--spacing-md));
    height: 100%;
    position: absolute;
    right: -15px;
    z-index: -1;
    opacity: 0;
    transition: opacity .3s, background .3s;
}

.phpdocumentor-search--enabled {
    display: block;
}

.phpdocumentor-search--active {
    opacity: 1;
}
.phpdocumentor-search--has-results:before {
    background: var(--popover-background-color);
    opacity: 1;
}

.phpdocumentor-search input:disabled {
    background-color: lightgray;
}

.phpdocumentor-search__field {
    background-color: #fff;
    border: 0;
    border-radius: 50px;
    color: #333;
    font-size: 18px;
    line-height: 50px;
    padding-left: 45px;
    width: 80%;
    height: 50px;
}

.phpdocumentor-search__field:focus {
    border: none;
}

.phpdocumentor-element-found-in {
    font-size: var(--text-sm);
    color: gray;
    margin-bottom: var(--spacing-md);
}

.phpdocumentor-class-graph {
    width: 100%; height: 600px; border:1px solid black; overflow: hidden
}

.phpdocumentor-class-graph__graph {
    width: 100%;
}

/* Other
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.phpdocumentor-content h1 .headerlink,
.phpdocumentor-content h2 .headerlink,
.phpdocumentor-content h3 .headerlink,
.phpdocumentor-content h4 .headerlink,
.phpdocumentor-content h5 .headerlink,
.phpdocumentor-content h6 .headerlink {
    display: none;
    padding-left: 10px;
    text-decoration: none;
    color: silver;
}
/* ... */

